slight spacing corrections

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,10 @@
+
+
+
+
+
+
+
 .app-links {
 	font-size: 24px;
 }
@@ -53,7 +60,7 @@ header {
 	margin-top: 0px;
 }
 i {
-	padding-right: 10px
+	padding-right: 10px;
 }
 #info-buttons {
 	position: absolute;
@@ -458,3 +465,10 @@ i {
 		left: 84%;
 	}
 }
+
+
+
+
+
+
+
